# scout

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  task_plan.md
src/: __init__.py  __main__.py  cache.py  cache_redis.py  config.py  deep.py  errors.py  formatting.py  prompts.py  ratelimit.py  research.py  retry.py  scoring.py  semantic.py  server.py  structured.py  suggestions.py  summary.py  url_safety.py  utils.py
src/engines/: __init__.py  academic.py  bilibili.py  bing.py  brave.py  ddg_news.py  duckduckgo.py  github_search.py  google.py  google_scholar.py  hackernews.py  huggingface.py  mojeek.py  npm.py  openstreetmap.py  podcast.py  pubmed.py  pypi.py  reddit.py  searxng.py  stackoverflow.py  startpage.py  twitter.py  unsplash.py  wikipedia.py  yandex.py  youtube.py
src/fetchers/: __init__.py  browser.py  documents.py  http.py
tests/: test_cache.py  test_engines.py  test_engines_parse.py  test_error_handling.py  test_formatting.py  test_merger.py  test_new_engines.py  test_ratelimit.py  test_scoring.py  test_suggestions.py  test_summary.py  test_url_safety.py
